# rejects-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/routes/: cases.py  chat.py  health.py
app/core/: config.py  settings.py
app/schemas/: analysis.py  health.py
app/services/: cache.py  llm.py  rag.py  resources.py  sheets.py
ui/: app.py  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.tsx  styles.css
