[project]
name = "rejects-analyzer"
version = "0.1.0"
description = "AI agent for interview rejection analysis"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "google-api-python-client>=2.160.0",
    "google-auth>=2.38.0",
    "gspread>=6.2.1",
    "langchain==0.3.27",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-qdrant>=0.2.0,<0.3.0",
    "pandas>=2.2.0",
    "pydantic-settings>=2.8.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.13.0",
    "requests>=2.32.0",
    "streamlit>=1.45.0",
    "tabulate>=0.10.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
